# 13_democratiser_sobriete

./: .gitignore  .pre-commit-config.yaml  Dockerfile  carbon_target.ipynb  fast_ingestion_pipeline.py  pyproject.toml
.github/workflows/: pre-commit.yaml
libs/kotaemon/kotaemon/indices/: vectorindex.py
libs/ktem/ktem/index/: base.py
libs/pipelineblocks/pipelineblocks/example_scripts/: fast_ingestion_pipeline_example.py
libs/taxonomy/taxonomy/: paper_taxonomy.py
rag_system/: .gitattributes  .gitignore  README.md  docker-compose.yml
rag_system/kotaemon/: .gitattributes  Dockerfile  fast_ingestion_pipeline.py
rag_system/kotaemon/libs/pipelineblocks/: pyproject.toml
rag_system/kotaemon/libs/pipelineblocks/pipelineblocks/example_scripts/: fast_ingestion_pipeline_example.py
rag_system/kotaemon/libs/pipelineblocks/pipelineblocks/extraction/pdf_utils/: pymu.py
rag_system/kotaemon/libs/pipelineblocks/pipelineblocks/extraction/pdfextractionblock/: base.py
rag_system/kotaemon/libs/pipelineblocks/pipelineblocks/llm/ingestionblock/: openai.py
rag_system/kotaemon_install_guide/: README.md  docker-compose.yml_example
rag_system/pipeline_scripts/: fast_ingestion_pipeline.py
rag_system/taxonomy/: pyproject.toml
rag_system/taxonomy/taxonomy/: geographical_taxonomy.py  publication_taxonomy.py  themes_taxonomy.py
src/: container.py  main.py
src/usecase/: open_alex_paper_ingestion.py
src/wsl_library/: __init__.py
src/wsl_library/domain/: paper_taxonomy.py
src/wsl_library/infra/: __init__.py
src/wsl_library/pdfextraction/: __init__.py  main.py
src/wsl_library/pdfextraction/llm/: utils.py  (+1 more)
src/wsl_library/scraping/: extract_openalex.py  parse_metadata.py
src/wsl_library/usecase/: open_alex_paper_ingestion.py
src/wslibrary/domain/: paper.py  taxonomy.py
src/wslibrary/pdfextraction/: main.py  taxonomy.py
tests/pdfextraction/llm/: 1-s2.0-S0094119008001095-main.md  1-s2.0-S0094119008001095-main_deepseek32.json  1-s2.0-S0094119008001095-main_main_parts_prompt.md  1-s2.0-S2211467X23001748-main_main_parts_prompt.md  test_prompts.py
tests/pdfextraction/pdf/: 1-s2.0-S2211467X23001748-main.md  test_pymu.py
tests/use_case/: test_open_alex_paper_ingestion.py
(+16 files in other folders)
