[project]
name = "taxonomy"
version = "0.1.0"
description = "Define the taxonomy pydantic objects as a python package to be used by all others libs"
dependencies = ["pydantic>=2.10.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["taxonomy"]